Fri Sep 17 14:29:04 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/simpleTCP/SimpleTcpConnection.cpp:
        * examples/DCPS/DistributedContent/ApplicationLevel.cpp:
        * examples/DCPS/DistributedContent/main.cpp:

          Updated #includes for latest DOC group changes to ACE.

Thu Sep 16 00:13:51 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/PublisherImpl.cpp:

          Moved the delete_datawriter call out of pi_lock_
          guard. This intended to fix a deadlock due to reverse
          locking with pi_lock and TransportImpl lock. The deadlock
          happend when the delete_contained_entities is called
          which acquire pi_lock and then transport lock to unregister
          writer from transport. It's possible another thread (e.g.
          reactor thread) handling imcoming fully association message
          which hold TransportImpl lock and then wait on pi_lock due
          to TRANSIENT_LOCAL support.

Tue Sep 14 15:48:17 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/OfferedDeadlineWatchdog.cpp:
        * dds/DCPS/Qos_Helper.h:
        * dds/DCPS/ReceivedDataElementList.h:
        * dds/DCPS/RequestedDeadlineWatchdog.cpp:
        * dds/DCPS/Serializer.cpp:
        * dds/DCPS/transport/framework/BasicQueueLinkAllocator_T.h:
        * dds/DCPS/transport/framework/TransportReceiveStrategy.inl:
        * dds/DCPS/transport/multicast/MulticastDataLink.cpp:
        * performance-tests/Bench/src/Options.h:
        * performance-tests/DCPS/MulticastListenerTest/TestStats.h:
        * performance-tests/DCPS/Priority/Options.h:
        * performance-tests/DCPS/SimpleLatency/raw_tcp/common/TestData.h:
        * performance-tests/DCPS/TCPListenerTest/TestStats.h:
        * performance-tests/DCPS/TCPProfilingTest/TestStats.h:
        * performance-tests/DCPS/TCPProfilingTest/raw_tcp/common/TestData.h:
        * performance-tests/DCPS/TCPProfilingTest/raw_tcp/subscriber/TestStats.h: