@@ -17,7 +17,7 @@ use PerlDDS::Run_Test;
 chdir $DDS_ROOT;
 my $opt_d = 'java/jms';
 my $operation = shift;
-my @targets = (); #each element is a list-ref with [directory, ant target]
+my @targets = (); # each element is a list-ref with [directory, ant target]
 
 if ($operation eq 'build') {
     @targets = (['.', 'rar'], ['compat', 'ear']);
@@ -41,6 +41,8 @@ if ($^O eq 'MSWin32') {
     map s/-D([\w.]+)=(\S+)=(\S+)/-D$1=\\"$2=$3\\"/, @ARGV;
 }
 
+map {$_ = '"' . $_ . '"' if $_ =~ / /} @ARGV;
+
 my $overall_status = 0;
 
 for my $tgt (@targets) {
@@ -54,12 +56,12 @@ for my $tgt (@targets) {
       my $PROC;
       if ($^O eq 'MSWin32') {
         $PROC = PerlDDS::create_process("$ENV{windir}\\system32\\cmd",
-                                     "/c $ANT_HOME/bin/ant @ARGV $extra " .
-                                     "$tgt->[1]");
+                                        "/c $ANT_HOME/bin/ant @ARGV $extra " .
+                                        "$tgt->[1]");
       }
       else {
         $PROC = PerlDDS::create_process("$ANT_HOME/bin/ant",
-                                     "@ARGV $extra $tgt->[1]");
+                                        "@ARGV $extra $tgt->[1]");
       }
       $status = $PROC->SpawnWaitKill(600);
     }
@@ -84,7 +86,7 @@ for my $tgt (@targets) {
                     $overall_status += $r;
                     if ($r == 0) {
                       s/Errors:/Errs:/;
-                      #we don't want this to get parsed as an 'error' line
+                      # we don't want this to get parsed as an 'error' line
                     } else {
                       $testfailed = 1;
                     }
@@ -99,9 +101,9 @@ for my $tgt (@targets) {
         close LOG;
     }
     if ($status > 0) {
-        #If we've had a test failure, the scoreboard will pick that up as
-        #an 'error' line and we don't need an extra one for the ant invocation
-        #returning non-zero.
+        # If we've had a test failure, the scoreboard will pick that up as
+        # an 'error' line and we don't need an extra one for the ant invocation
+        # returning non-zero.
         if ($testfailed == 0) {
             print "ERROR: ";
         }
